# ppap

./: .gitignore  CalcExample1.calc  GoCRIS.md  LICENSE  Project.md  Project_A.md  README.MD  README.md  a.md  claude.md  codex.md  einstein.sh  fib.sh  lbeta.sh  ndc.aladdin  ppap.cabal  stack.yaml  systemf.aladdin  tmp.txt  tmp2.txt
Example/: BlockArgument.hs  BlockArgument.txt  BlockArgument2.hs  BlockArgument2.txt  CalcExample1.calc  Einstein.aladdin  Fol1.genie  Genie.jasmine  Genie1.jasmine  NDC.aladdin  Nat.jasmine  Ndc.aladdin  Ndc.jasmine  PlanHolLexer.hs  PlanHolLexer.txt  PlanHolParser.hs  PlanHolParser.txt  SystemF.aladdin  Test.aladdin  blockargument.txt  diagram1.txt  fibonacci.hol  parserex1.failed  parserex1.txt  stlc.hol  test.hol
Example/ALPHA2/: PlanHolLexer.hs  PlanHolParser.hs
Example/BETA1/: PlanHolLexer.hs  PlanHolLexer.txt  PlanHolParser.hs  PlanHolParser.txt
Example/BETA2/: PlanHolParser.hs  PlanHolParser.txt
Test/: smoke.sh
Test/debug/: assign_fail.expected.txt  assign_fail.hol  assign_fail.input.txt  assign_fail_scope.expected.txt  assign_fail_scope.hol  assign_fail_scope.input.txt  assign_fail_typing.expected.txt  assign_fail_typing.hol  assign_fail_typing.input.txt  assign_ok.expected.txt  assign_ok.hol  assign_ok.input.txt  assign_t4.expected.txt  assign_t4.hol  assign_t4.input.txt  show.expected.txt  show.hol  show.input.txt  toggle.expected.txt  toggle.input.txt
Test/fibonacci/: fib_square.expected.txt  fib_square.input.txt
Test/io/: print_read.expected.txt  print_read.input.txt
Test/kind/: higher_order_kind_rejected.expected.txt  higher_order_kind_rejected.input.txt
Test/module/: cycle.expected.txt  cycle.hol  cycle.input.txt  cycle_a.hol  cycle_b.hol  diamond_bot.hol  diamond_import.expected.txt  diamond_import.hol  diamond_import.input.txt  diamond_left.hol  diamond_right.hol  explicit_header.expected.txt  explicit_header.hol  explicit_header.input.txt  inc_fixity_b.hol  inconsistent_abbrev.expected.txt  inconsistent_abbrev.hol  inconsistent_abbrev.input.txt  inconsistent_fixity.expected.txt  inconsistent_fixity.hol  inconsistent_fixity.input.txt  mid.hol  mismatched_header.expected.txt  mismatched_header.hol  mismatched_header.input.txt  simple_import.expected.txt  simple_import.hol  simple_import.input.txt  transitive_import.expected.txt  transitive_import.hol  transitive_import.input.txt  util.hol
Test/multi_head/: cut_in_body.expected.txt  cut_in_body.hol  cut_in_body.input.txt  local_imply.expected.txt  local_imply.input.txt  simple.expected.txt  simple.input.txt  type_unification.expected.txt  type_unification.input.txt
Test/notation/: abbrev.expected.txt  abbrev.hol  abbrev.input.txt  capture.expected.txt  capture.input.txt  fixity.expected.txt  fixity.input.txt  notation.expected.txt  notation.hol  notation.input.txt  override.expected.txt  override.hol  override.input.txt  sym_operator.expected.txt  sym_operator.hol  sym_operator.input.txt  typing_error_fold.expected.txt  typing_error_fold.hol  typing_error_fold.input.txt  typing_fold.expected.txt  typing_fold.hol  typing_fold.input.txt
Test/presburger/: basic.expected.txt  basic.input.txt  consistency.expected.txt  consistency.hol  consistency.input.txt  entailment_drop.expected.txt  entailment_drop.hol  entailment_drop.input.txt  quantified.expected.txt  quantified.input.txt  residual.expected.txt  residual.hol  residual.input.txt  solver_sanity.expected.txt  solver_sanity.input.txt
Test/sloc/: goal_loc_in_debug.expected.txt  goal_loc_in_debug.input.txt  install_pass_loc.expected.txt  install_pass_loc.hol  install_pass_loc.input.txt  type_error_subterm.expected.txt  type_error_subterm.input.txt
Test/symbolic/: is_expand.expected.txt  is_expand.input.txt
a/: boot.sh  e2e.sh  extract-gofile-v.sh  go-dir-diff.sh  golanggen-translator.sh  randomgen.sh  run.sh  test.sh  unboot.sh
doc/: BETA1.txt  BETA1_spec.md  HolBETA.txt  HolBETA1.txt  HolBETA2.txt  Plan.txt  Project_A.txt  llm-guideline.md  presburger-goal-closure.md
example/: BlockArgument.hs  BlockArgument2.txt  Fol1.genie  Nat.jasmine  stlc.hol  test.hol
example/BETA/: PlanHolLexer.txt  PlanHolParser.hs  PlanHolParser.txt
example/BETA1/: PlanHolLexer.txt  PlanHolParser.hs  PlanHolParser.txt
example/BETA2/: PlanHolLexer.hs  PlanHolLexer.txt  PlanHolParser.txt
src/: Main.hs  TEST.hs
src/ALPHA2/: Compiler.hs  Constant.hs  Desugarer.hs  HOPU.hs  Header.hs  Main.hs  PlanHolLexer.hs  PlanHolParser.hs  Runtime.hs  TermNode.hs  TypeChecker.hs
src/Aladdin/: Main.hs
src/CTRL/: Main.hs  TransferAnalysis.hs
src/Calc/: Main.hs
src/Genie/: Main.hs
src/GoCRIS/: Main.hs
src/Hol/: Main.hs
src/Isa/: Dep.hs
src/IsabelleHol/: Dependecies.hs
src/Jasmine/: API.hs  Main.hs  PLAN.md  PresburgerSolver.hs  PresburgerSolver.md
src/Json/: JsonAst.hs  JsonLexer  JsonLexer.hs  JsonLexer.txt  JsonParser  JsonParser.hs  JsonTest.hs  JsonViewer.hs  TestUnitInput1.txt  TestUnitOutput1.txt
src/LGS/: Alpha1.hs  Alpha2.hs  Main.hs  Make.hs  Read.hs  Show.hs  Util.hs
src/Lib/: Base.hs
src/Machine/: machine.h
src/PGS/: Alpha1.hs  LALR.hs  Main.hs  Make.hs  Read.hs  Show.hs  Util.hs
src/Project/: Main.hs
src/TEST/: Jasmine.hs  Main.hs  Z.hs
src/Test/: Main.hs  Z.hs
src/X/: Machine.hs  Main.hs  machine.c  machine.h
src/Y/: Base.hs
src/Z/: Algorithms.hs  Doc.hs  OldPC.hs  PC.hs  Path.hs  System.hs  Utils.hs
test/: smoke.sh
test/debug/: assign_fail.expected.txt  assign_fail.hol  assign_fail.input.txt  assign_fail_scope.expected.txt  assign_fail_scope.hol  assign_fail_scope.input.txt  assign_fail_typing.expected.txt  assign_fail_typing.hol  assign_fail_typing.input.txt  assign_ok.expected.txt  assign_ok.hol  assign_ok.input.txt  assign_t4.expected.txt  assign_t4.hol  assign_t4.input.txt  presburger_view.expected.txt  presburger_view.hol  presburger_view.input.txt  show.expected.txt  show.hol  show.input.txt  toggle.expected.txt  toggle.hol  toggle.input.txt
test/example/: einstein.expected.txt  einstein.hol  einstein.input.txt  fibonacci.expected.txt  fibonacci.hol  fibonacci.input.txt  (+2 more)
(+400 files in other folders)
