name: ppap
version: 1.0.0
synopsis: Projects Pouring All Power
description: The collection of my Haskell projects including a lexer generator, a parser generator, and an interpreter of (a dialect of) λProlog.
homepage: https://github.com/KiJeong-Lim/ppap
license: BSD3
license-file: LICENSE
author: 林起靖
maintainer: gijungdduk@naver.com
copyright: 2021-2026, Kijeong Lim
build-type: Simple
cabal-version: 2.0

executable ppap
  hs-source-dirs: src
  default-language: Haskell2010
  main-is: Main.hs
  ghc-options: -O2 -funbox-strict-fields -fspec-constr -fexpose-all-unfoldings -fspecialise-aggressively
  build-depends: base >= 4.7 && < 5, array >= 0.5, containers >= 0.6, transformers >= 0.5, pretty-terminal >= 0.1, QuickCheck >= 2.13, checkers >= 0.5, directory >= 1.3, vector >= 0.12, math-functions >= 0.3, extra >= 1.7, filepath >= 1.5, process >= 1.0, random >= 1.0
  other-modules:
    Calc.ControlSystem.Diagram.Solver
    Calc.ControlSystem.Export
    Calc.ControlSystem.Test
    Calc.ControlSystem.Util
    Calc.Presburger.Internal
    Calc.Presburger.Test
    Calc.Runtime.Executor
    Calc.Tools.Fuzzy
    Calc.Tools.FuzzyExample1
    Calc.Main
    Hol.ALPHA2.Header
    Hol.ALPHA2.PlanHolLexer
    Hol.ALPHA2.PlanHolParser
    Hol.ALPHA2.Constant
    Hol.ALPHA2.Desugarer
    Hol.ALPHA2.TypeChecker
    Hol.ALPHA2.TermNode
    Hol.ALPHA2.HOPU
    Hol.ALPHA2.Runtime
    Hol.ALPHA2.Compiler
    Hol.ALPHA2.Main
    Hol.BETA1.Arith
    Hol.BETA1.Compiler
    Hol.BETA1.Constant
    Hol.BETA1.Debugger
    Hol.BETA1.Desugarer
    Hol.BETA1.Header
    Hol.BETA1.HOPU
    Hol.BETA1.Main
    Hol.BETA1.Notation
    Hol.BETA1.PlanHolLexer
    Hol.BETA1.PlanHolParser
    Hol.BETA1.Runtime
    Hol.BETA1.TermNode
    Hol.BETA1.TypeChecker
    Hol.BETA2.Arith
    Hol.BETA2.Compiler
    Hol.BETA2.Constant
    Hol.BETA2.Debugger
    Hol.BETA2.Desugarer
    Hol.BETA2.Diagnostic
    Hol.BETA2.Header
    Hol.BETA2.HOPU
    Hol.BETA2.Main
    Hol.BETA2.ModuleLoader
    Hol.BETA2.Notation
    Hol.BETA2.PlanHolLexer
    Hol.BETA2.PlanHolParser
    Hol.BETA2.Runtime
    Hol.BETA2.TermNode
    Hol.BETA2.TypeChecker
    Hol.V1.Main
    Hol.Main
    IsabelleHol.Dependecies
    Json.JsonAst
    Json.JsonLexer
    Json.JsonParser
    Json.JsonTest
    Json.JsonViewer
    LGS.Alpha1
    LGS.Main
    PGS.Alpha1
    PGS.LALR
    PGS.Main
    Project.A.Artifact
    Project.A.Fuzz.Corpus
    Project.A.Fuzz.Score
    Project.A.Fuzz.Shrink
    Project.A.Fuzz.Summary
    Project.A.Go.AST
    Project.A.Go.Feature
    Project.A.Go.Gen
    Project.A.Go.Mutate
    Project.A.Go.Pretty
    Project.A.Go.Shrink
    Project.A.Main
    Project.A.Pipeline.Config
    Project.A.Pipeline.CoqExtraction
    Project.A.Pipeline.ModExtraction
    Project.A.Pipeline.NativeGo
    Project.A.Pipeline.Runner
    Project.A.Types
    Project.A.Util.Json
    Project.A.Util.Process
    Project.Main
    TEST.Main
    X.Machine
    Y.Text.Ppr.Viewer
    Y.Text.Ppr
    Y.Base
    Z.Algo.Function
    Z.Algo.Sorting
    Z.Math.V1.Internal
    Z.Math.Classes
    Z.Math.V1
    Z.Math.Z2
    Z.System.File
    Z.System.Machine
    Z.System.Path
    Z.System.Shelly
    Z.System.Util
    Z.Text.Doc.Internal
    Z.Text.Doc.Test
    Z.Text.PC.Base
    Z.Text.PC.Internal
    Z.Text.PC.Test
    Z.Text.Doc
    Z.Text.PC
    Z.Text.PM
    Z.Algorithms
    Z.Doc
    Z.OldPC
    Z.PC
    Z.System
    Z.Utils
  include-dirs:
    src/X
  includes:
    machine.h
  c-sources:
    src/X/machine.c
